--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,20 @@
             android:layout_height="?attr/actionBarSize"
             app:title="Мои задачи"
             app:titleCentered="true"/>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutFilter"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:hint="Выберите список">
+
+            <AutoCompleteTextView
+                android:id="@+id/autoFilterList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
